<?xml version="1.0"?>
<package>
  <name>imu_velodyne_calibration</name>
  <version>0.0.0</version>
  <description>The calibration package</description>
  <maintainer email="mengdi@kth.se">mengdi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
