<?xml version="1.0"?>
<package>
  <name>ndt_localizer</name>
  <version>0.0.0</version>
  <description>The ndt_localizer package</description>
  <maintainer email="yuki@ertl.jp">kitsukawa</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>runtime_manager</build_depend>
  <build_depend>imu_filter_madgwick</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>runtime_manager</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cmake_modules</run_depend>
  <export>
  </export>
</package>
