<?xml version="1.0"?>
<package>
  <name>pcd_visualizer</name>
  <version>0.0.0</version>
  <description>view the point cloud map</description>
  <maintainer email="mengdi@kth.se">mengdi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>